--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "main": "index.js",
   "repository": "git@github.com:zhangwen0424/vue_pool.git",
   "author": "mornki <1048515550@qq.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
